<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="15dp"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/textView39"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans"
        android:lineHeight="19sp"
        android:text="@string/wash_hair_cut_and_styling"
        android:textColor="@color/text_purpul"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="15dp"
        android:fontFamily="@font/noto_sans"
        android:lineHeight="19sp"
        android:text="@string/chf25"
        android:textColor="@color/text_purpul"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView39"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/textView39" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView41"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView41"
        app:srcCompat="@drawable/arrow_right" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/textView39"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        app:srcCompat="@drawable/dotted_line" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name"
        android:textSize="11sp"
        android:lineHeight="18sp"
        android:textColor="@color/list_card_text"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:lineHeight="18sp"
        android:text="@string/curtis_stone"
        android:textColor="@color/black"
        android:textSize="12sp"

        app:layout_constraintEnd_toStartOf="@+id/textView45"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineHeight="18sp"
        android:text="@string/invoice_date"
        android:textColor="@color/list_card_text"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toTopOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:lineHeight="18sp"
        android:text="@string/_21_apr_2022"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/materialButton"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Button_green_bac"
        android:fontFamily="@font/noto_sans"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp"
        android:text="@string/completed"
        android:textAllCaps="false"
        android:textColor="@color/Button_green"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView45"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toTopOf="@+id/textView44" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>