<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

    </data>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView11"
            style="@style/Circuler"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/oval"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/textView46"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="22sp"
            android:text="@string/martin_randolph"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView48"
            app:layout_constraintStart_toEndOf="@+id/shapeableImageView11"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="18dp"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="20sp"
            android:text="@string/m"
            android:textColor="@color/black2"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="20sp"
            android:text="@string/_5"
            android:textColor="@color/black2"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView47"
            app:layout_constraintEnd_toStartOf="@+id/textView47"
            app:layout_constraintTop_toTopOf="@+id/textView47" />

        <com.google.android.material.card.MaterialCardView

            android:id="@+id/materialCardView10"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="19dp"
            android:backgroundTint="@color/card_blue_2"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView46">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/noto_sans"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textView49"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="26dp"
            android:text="@string/lorem_ipsum_is_simply_dummy_text"
            android:textSize="12sp"
            android:lineHeight="20sp"
            android:fontFamily="@font/noto_sans"
            android:textColor="@color/black2"
            android:textStyle="bold"
            android:singleLine="true"
            app:layout_constraintEnd_toStartOf="@+id/materialCardView10"
            app:layout_constraintStart_toStartOf="@+id/textView46"
            app:layout_constraintTop_toBottomOf="@+id/textView46" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
</layout>