<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="19sp"
                android:text="@string/wash_hair_cut_and_styling"
                android:textColor="@color/text_purpul"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView3"
                android:layout_width="9dp"
                android:layout_height="11dp"
                android:layout_marginTop="9dp"
                android:src="@drawable/location"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                android:text="@string/_8002_zurich"
                android:textColor="@color/list_card_text"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shapeableImageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/shapeableImageView4"
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_marginTop="11dp"
                android:layout_marginEnd="21dp"
                android:src="@drawable/dotted_line"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shapeableImageView3"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView3">

            </com.google.android.material.imageview.ShapeableImageView>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="18sp"
                android:text="@string/name"
                android:textColor="@color/list_card_text"
                android:textSize="10sp"
                app:layout_constraintEnd_toStartOf="@+id/textView18"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/shapeableImageView4"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView4" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="135dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="18sp"
                android:text="@string/curtis_stone"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="18sp"
                android:text="@string/booking_date"
                android:textColor="@color/list_card_text"
                android:textSize="10sp"

                app:layout_constraintEnd_toEndOf="@+id/shapeableImageView4"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/textView15"
                app:layout_constraintTop_toBottomOf="@+id/shapeableImageView4" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="18sp"
                android:text="@string/_21_apr_2022_04_15pm"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/textView18"
                app:layout_constraintStart_toEndOf="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                app:layout_constraintTop_toBottomOf="@+id/textView18" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_matirial"
                style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/Button_red_bac"
                android:fontFamily="@font/noto_sans"
                android:text="@string/reject"
                android:textColor="@color/Button_red"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />

            <com.google.android.material.button.MaterialButton
                style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/Button_green_bac"
                android:fontFamily="@font/noto_sans"
                android:paddingHorizontal="20dp"
                android:paddingVertical="4dp"
                android:text="@string/accept"
                android:textColor="@color/Button_green"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_matirial"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView6"
        android:layout_width="73dp"
        android:layout_height="73dp"
        android:layout_marginEnd="-35dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="18dp"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView5"
        app:layout_constraintEnd_toStartOf="@+id/materialCardView5"
        app:layout_constraintTop_toTopOf="@+id/materialCardView5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/women"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/Circuler" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>