<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.finance.FinianceFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        style="@style/CustomCardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
       android:backgroundTint="#F9CFD1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:paddingBottom="70dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginEnd="27dp"
            android:src="@drawable/group_173"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/group_1090"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="27dp"
            android:src="@drawable/group_1111"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.913" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/noto_sans"
            android:lineHeight="34sp"
            android:textStyle="bold"
            android:text="@string/finance"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:flow_verticalAlign="top"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView37"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2022"
            android:textStyle="bold"
            android:textSize="14sp"
            android:lineHeight="40sp"
            android:textColor="@color/white"
            android:fontFamily="@font/noto_sans"
            app:layout_constraintStart_toStartOf="@+id/textView31"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        style="@style/CustomeRectViewStyle"
        android:layout_width="134dp"
        android:layout_height="115dp"
        android:layout_marginStart="42dp"
        app:cardBackgroundColor="@color/rect_blue"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="20sp"
                android:text="@string/_1346"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:flow_verticalAlign="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="20sp"
                android:text="@string/revenue"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.constraintlayout.widget.ConstraintLayout>



    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        style="@style/CustomeRectViewStyle"
        android:layout_width="134dp"
        android:layout_height="115dp"
        android:layout_marginEnd="42dp"
        app:cardBackgroundColor="@color/rect_gold"
        app:layout_constraintBottom_toBottomOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="20sp"
                android:text="@string/_348"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:flow_verticalAlign="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/noto_sans"
                android:lineHeight="20sp"
                android:text="@string/bookings"
                android:textAlignment="center"

                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>